--- a/web/css/header-footer.css
+++ b/web/css/header-footer.css
@@ -5,7 +5,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
-  color: #3d3d3d;
+  /*color: #3d3d3d;  Потому, что это мешает цветам bootstrap*/
   outline: none;
 }
 
