--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -18,6 +18,11 @@
     min-height: 110vh;
   }
 }
+@media (max-width: 600px) {
+  .main-item {
+    background-position: 28% center;
+  }
+}
 
 .main-item-container {
   width: 1300px;
@@ -127,7 +132,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #AA3E3E;
-  padding: 100px 0;
+  padding: 70px 0;
 }
 
 .what-is-fined-for-container {
@@ -159,7 +164,7 @@
 .what-is-fined-for-container p {
   color: #ffffff;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 32px;
   text-align: center;
   margin-bottom: 30px;
 }
@@ -292,12 +297,14 @@
 .services-item ul {
   padding-left: 30px;
   margin-bottom: 15px;
+  list-style: circle;
 }
 
 .services-item ul li {
   color: #AA3E3E;
   margin-bottom: 5px;
-  font-weight: 300;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .services-item ul li span {
@@ -403,7 +410,7 @@
 .articles-tab {
   border: 2px solid #AA3E3E;
   color: #AA3E3E;
-  padding: 5px;
+  padding: 2px 5px 5px 5px;
   min-width: 140px;
   max-width: 140px;
   cursor: pointer;
@@ -435,6 +442,7 @@
   color: #AA3E3E;
   line-height: 1;
   font-size: 14px;
+  font-weight: 700;
 }
 
 .articles-desc {
@@ -668,6 +676,10 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.arbitrage-practice .practice__row{
+  padding-top: 0;
 }
 
 @media (max-width: 1300px) {
@@ -983,6 +995,7 @@
 
 .questions-item ul {
   padding-left: 20px;
+  list-style: circle;
 }
 
 .questions-item ul li {
@@ -1105,6 +1118,7 @@
   font-size: 24px;
   text-align: center;
   margin-bottom: 15px;
+  font-weight: bold;
 }
 
 .steps-item p {
@@ -1195,6 +1209,7 @@
 
 .pers-cab-right ul {
   padding-left: 20px;
+  list-style: disc;
 }
 
 .pers-cab-right ul li {
