--- a/docs/css/sites.css
+++ b/docs/css/sites.css
@@ -129,7 +129,7 @@ div.summary {
 }
 
 .main-cabinet-container {
-/*  min-width: 1300px;*/
+  min-width: 1300px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
